# openenv-bug-triage

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  Dockerfile  HACKATHON_COMPLIANCE.md  LICENSE  MOHIT_IMPLEMENTATION_PLAN.md  Makefile  README.md  Saksham_implementation_plan.md  WorkPlan.md  inference.py  openenv.yaml  openenv_hackathon_detailed.txt  pyproject.toml  standalone_backend_test.py
.github/workflows/: ci.yml  hf-sync.yml
bugtriage_env/: README.md  __init__.py  client.py  grader.py  models.py  openenv.yaml  pyproject.toml
bugtriage_env/server/: Dockerfile  __init__.py  app.py  bugtriage_env_environment.py
docs/: ACTIONS_OBS_SCHEMA.md  ARCHITECTURE.md  SCORING_RUBRIC.md  TASK_SPEC.md
examples/: sample_issue.json  sample_trajectory.md
scripts/: run_baseline.sh  run_docker.sh  run_local.sh  setup.sh  validate_backend_logic.py  validate_tasks.py  verify_contract.sh  verify_docker.sh  verify_security.sh
server/: __init__.py  app.py
tasks/: README.md  issues_easy.json  issues_hard.json  issues_medium.json
tests/: test_reset_step.py  test_score_range.py  test_security_rule.py  test_task_scenarios.py
