[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bug-triage"
version = "0.1.0"
description = "Bug/Issue Triage OpenEnv submission package"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bugtriage_env*"]
where = ["."]

[project.scripts]
server = "server.app:main"